@@ -7,6 +7,8 @@ Changelog
 
 - Fix news folder not shown in navigation (plone5) [Nachtalb]
 - Remove src checkouts of plone5 branches of in the meantime released packages [Nachtalb]
+- Add missing document description in news_listing view [Nachtalb]
+
 
 1.13.0 (2019-09-12)
 -------------------
